--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 derivative = "2.2.0"
 eth2_hashing = "0.2.0"
+eth2_ssz = "0.4.0"
 parking_lot = "0.11.2"
 serde = "1.0.0"
 tree_hash = "0.4.0"
