--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,9 @@ eth2_hashing = "0.2.0"
 eth2_ssz = "0.4.0"
 parking_lot = "0.11.2"
 serde = "1.0.0"
+smallvec = { version = "1.7.0", features = ["const_generics"] }
 tree_hash = "0.4.0"
 typenum = "1.14.0"
+
+[dev-dependencies]
+eth2_ssz_types = "0.2.1"
