--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 derivative = "2.2.0"
 eth2_hashing = "0.2.0"
 eth2_ssz = "0.4.0"
+itertools = "0.10.3"
 parking_lot = "0.11.2"
 serde = "1.0.0"
 smallvec = { version = "1.7.0", features = ["const_generics"] }
