--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ eth2_ssz = "0.4.0"
 itertools = "0.10.3"
 parking_lot = "0.11.2"
 serde = "1.0.0"
-smallvec = { version = "1.7.0", features = ["const_generics"] }
 tree_hash = "0.4.0"
+triomphe = "0.1.5"
 typenum = "1.14.0"
 
 [dev-dependencies]
