Parallel tree hashing with Rayon

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ eth2_hashing = "0.2.0"
 eth2_ssz = "0.4.0"
 itertools = "0.10.3"
 parking_lot = "0.11.2"
+rayon = "1.5.1"
 serde = "1.0.0"
 tree_hash = "0.4.0"
 triomphe = "0.1.5"
