--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ itertools = "0.10.3"
 parking_lot = "0.11.2"
 rayon = "1.5.1"
 serde = "1.0.0"
+# sharded-slab = "0.1.4"
+sharded-slab = { path = "../sharded-slab" }
 tree_hash = "0.4.0"
 triomphe = "0.1.5"
 typenum = "1.14.0"
