--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,15 @@ itertools = "0.10.3"
 parking_lot = "0.11.2"
 rayon = "1.5.1"
 serde = "1.0.0"
-tree_hash = "0.4.0"
+tree_hash = "0.4.1"
 triomphe = "0.1.5"
 typenum = "1.14.0"
 
 [dev-dependencies]
-eth2_ssz_types = "0.2.1"
+eth2_ssz_types = "0.2.2"
+
+[patch.crates-io]
+tree_hash = { path = "../lighthouse/consensus/tree_hash" }
+eth2_ssz_types = { path = "../lighthouse/consensus/ssz_types" }
+eth2_serde_utils = { path = "../lighthouse/consensus/serde_utils" }
+eth2_ssz = { path = "../lighthouse/consensus/ssz" }
