--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,14 +18,14 @@ triomphe = "0.1.5"
 typenum = "1.14.0"
 
 [dev-dependencies]
-eth2_ssz_types = "0.2.1"
+eth2_ssz_types = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
 proptest = "1.0.0"
 tree_hash_derive = "0.4.0"
 
 [patch.crates-io]
-tree_hash = { path = "../lighthouse/consensus/tree_hash" }
-tree_hash_derive = { path = "../lighthouse/consensus/tree_hash_derive" }
-eth2_ssz_types = { path = "../lighthouse/consensus/ssz_types" }
-eth2_serde_utils = { path = "../lighthouse/consensus/serde_utils" }
-eth2_ssz = { path = "../lighthouse/consensus/ssz" }
-eth2_ssz_derive = { path = "../lighthouse/consensus/ssz_derive" }
+tree_hash = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
+tree_hash_derive = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
+eth2_ssz_types = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
+eth2_serde_utils = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
+eth2_ssz = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
+eth2_ssz_derive = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
