--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1.0.0", features = ["derive"] }
 tree_hash = "0.4.0"
 triomphe = "0.1.5"
 typenum = "1.14.0"
+vec_map = "0.8.2"
 
 [dev-dependencies]
 eth2_ssz_types = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
