--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 description = "Persistent binary merkle tree"
 edition = "2021"
 
+[[bench]]
+name = "repeat"
+harness = false
+
 [dependencies]
 derivative = "2.2.0"
 eth2_hashing = "0.2.0"
@@ -17,11 +21,14 @@ tree_hash = "0.4.0"
 triomphe = "0.1.5"
 typenum = "1.14.0"
 vec_map = "0.8.2"
+smallvec = "1.8.0"
 
 [dev-dependencies]
 eth2_ssz_types = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
 proptest = "1.0.0"
 tree_hash_derive = "0.4.0"
+criterion = "0.3"
+pprof = { version = "0.9.1", features = ["criterion", "flamegraph"] }
 
 [patch.crates-io]
 tree_hash = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
@@ -31,3 +38,6 @@ eth2_serde_utils = { git = "https://github.com/sigp/lighthouse.git", branch = "t
 eth2_ssz = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
 eth2_ssz_derive = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
 eth2_hashing = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
+
+[profile.bench]
+debug = 1
