--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,34 +6,25 @@ edition = "2021"
 
 [dependencies]
 derivative = "2.2.0"
-eth2_hashing = "0.2.0"
-eth2_ssz = "0.4.0"
-eth2_ssz_derive = "0.3.0"
+ethereum_hashing = "1.0.0-beta.2"
+ethereum_ssz = "0.5.0"
+ethereum_ssz_derive = "0.5.0"
 itertools = "0.10.3"
 parking_lot = "0.11.2"
 rayon = "1.5.1"
 serde = { version = "1.0.0", features = ["derive"] }
-tree_hash = "0.4.0"
+tree_hash = "0.5.0"
 triomphe = "0.1.5"
 typenum = "1.14.0"
 vec_map = "0.8.2"
 smallvec = "1.8.0"
 
 [dev-dependencies]
-eth2_ssz_types = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
+ssz_types = "0.5.0"
 proptest = "1.0.0"
-tree_hash_derive = "0.4.0"
+tree_hash_derive = "0.5.0"
 criterion = "0.3"
 pprof = { version = "0.9.1", features = ["criterion", "flamegraph"] }
-
-[patch.crates-io]
-tree_hash = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
-tree_hash_derive = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
-eth2_ssz_types = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
-eth2_serde_utils = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
-eth2_ssz = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
-eth2_ssz_derive = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
-eth2_hashing = { git = "https://github.com/sigp/lighthouse.git", branch = "tree-states" }
 
 [profile.bench]
 debug = 1
