--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,14 @@ edition = "2021"
 
 [dependencies]
 derivative = "2.2.0"
-ethereum_hashing = "1.0.0-beta.2"
+ethereum_hashing = "0.6.0"
 ethereum_ssz = "0.5.0"
 ethereum_ssz_derive = "0.5.0"
 itertools = "0.10.3"
 parking_lot = "0.12.1"
 rayon = "1.5.1"
 serde = { version = "1.0.0", features = ["derive"] }
-tree_hash = "0.5.0"
+tree_hash = "0.6.0"
 triomphe = "0.1.5"
 typenum = "1.14.0"
 vec_map = "0.8.2"
@@ -22,9 +22,9 @@ arbitrary = { version = "1.2.3", features = ["derive"] }
 ethereum-types = { version = "0.14.1", features = ["arbitrary"] }
 
 [dev-dependencies]
-ssz_types = "0.5.0"
+ssz_types = "0.6.0"
 proptest = "1.0.0"
-tree_hash_derive = "0.5.0"
+tree_hash_derive = "0.6.0"
 criterion = "0.3"
 
 [[bench]]
