--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "milhouse"
 version = "0.1.0"
 description = "Persistent binary merkle tree"
 edition = "2021"
+license = "Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/sigp/milhouse"
+documentation = "https://docs.rs/milhouse"
+keywords = ["ethereum", "functional"]
+categories = ["data-structures", "cryptography::cryptocurrencies", ]
 
 [dependencies]
 derivative = "2.2.0"
