Type check fuzzers on CI and fix another bug

--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -19,6 +19,8 @@ jobs:
       run: rustup update stable
     - name: Check formatting with cargo fmt
       run: cargo fmt --all -- --check
+    - name: Check fuzzer formatting with cargo fmt
+      run: cargo fmt --manifest-path fuzz/Cargo.toml --all --check
   clippy:
     name: clippy
     runs-on: ubuntu-latest
@@ -38,7 +40,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Get latest version of stable Rust
       run: rustup update stable
+    - name: Get latest version of nightly Rust
+      run: rustup update nightly
     - name: Run tests
       run: cargo test --release
     - name: Check all examples, binaries, etc
       run: cargo check --all-targets
+    - name: Check fuzzer targets
+      run: cargo +nightly check --manifest-path fuzz/Cargo.toml --all-targets
