--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,26 +11,27 @@ keywords = ["ethereum", "functional"]
 categories = ["data-structures", "cryptography::cryptocurrencies", ]
 
 [dependencies]
+alloy-primitives = { version = "0.7.7", features =["arbitrary"] }
 derivative = "2.2.0"
 ethereum_hashing = "0.6.0"
-ethereum_ssz = "0.5.0"
-ethereum_ssz_derive = "0.5.0"
+ethereum_ssz = { git = "https://github.com/sigp/ethereum_ssz", branch = "alloy" }
+ethereum_ssz_derive = { git = "https://github.com/sigp/ethereum_ssz", branch = "alloy" }
 itertools = "0.10.3"
 parking_lot = "0.12.1"
 rayon = "1.5.1"
 serde = { version = "1.0.0", features = ["derive"] }
-tree_hash = "0.6.0"
+tree_hash = { git = "https://github.com/eserilev/tree_hash", branch = "alloy-deps"}
 triomphe = "0.1.5"
 typenum = "1.14.0"
 vec_map = "0.8.2"
 smallvec = "1.8.0"
 arbitrary = { version = "1.2.3", features = ["derive"] }
-ethereum-types = { version = "0.14.1", features = ["arbitrary"] }
+
 
 [dev-dependencies]
-ssz_types = "0.6.0"
+ssz_types = { git = "https://github.com/eserilev/ssz_types", branch = "alloy-tweaks" }
 proptest = "1.0.0"
-tree_hash_derive = "0.6.0"
+tree_hash_derive = { git = "https://github.com/eserilev/tree_hash", branch = "alloy-deps"}
 criterion = "0.5"
 
 [features]
