--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,13 @@ keywords = ["ethereum", "functional"]
 categories = ["data-structures", "cryptography::cryptocurrencies", ]
 
 [dependencies]
+arc-swap = "1.7.1"
 derivative = "2.2.0"
 ethereum_hashing = "0.6.0"
 ethereum_ssz = "0.5.0"
 ethereum_ssz_derive = "0.5.0"
 itertools = "0.10.3"
-parking_lot = "0.12.1"
+parking_lot = { version = "0.12.1", features = ["arc_lock"] }
 rayon = "1.5.1"
 serde = { version = "1.0.0", features = ["derive"] }
 tree_hash = "0.6.0"
