--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ categories = ["data-structures", "cryptography::cryptocurrencies", ]
 alloy-primitives = { version = "0.7.7", features =["arbitrary"] }
 derivative = "2.2.0"
 ethereum_hashing = "0.6.0"
-ethereum_ssz = { git = "https://github.com/sigp/ethereum_ssz", branch = "alloy" }
-ethereum_ssz_derive = { git = "https://github.com/sigp/ethereum_ssz", branch = "alloy" }
+ethereum_ssz = { git = "https://github.com/eserilev/ethereum_ssz", branch = "alloy" }
+ethereum_ssz_derive = { git = "https://github.com/eserilev/ethereum_ssz", branch = "alloy" }
 itertools = "0.10.3"
 parking_lot = "0.12.1"
 rayon = "1.5.1"
