--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ ssz_types = "0.10"
 proptest = "1.0.0"
 tree_hash_derive = "0.9"
 criterion = "0.5"
+serde_json = "1.0.0"
 
 [features]
 debug = []
