--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,8 @@ triomphe = "0.1.5"
 typenum = "1.14.0"
 vec_map = "0.8.2"
 smallvec = "1.8.0"
-arbitrary = { version = "1.2.3", features = ["derive"] }
-alloy-primitives = { version = "1.0.0", features = ["arbitrary"] }
+arbitrary = { version = "1.2.3", optional = true }
+alloy-primitives = { version = "1.0.0" }
 
 
 [dev-dependencies]
@@ -36,6 +36,8 @@ criterion = "0.5"
 serde_json = "1.0.0"
 
 [features]
+default = ["arbitrary"]
+arbitrary = ["arbitrary/derive", "alloy-primitives/arbitrary"]
 debug = []
 
 [[bench]]
