--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ ssz_types = "0.11"
 proptest = "1.0.0"
 tree_hash_derive = "0.10"
 criterion = "0.5"
+dhat = "0.3.3"
 serde_json = "1.0.0"
 
 [features]
@@ -54,3 +55,6 @@ harness = false
 [[bench]]
 name = "pop_front"
 harness = false
+
+[profile.bench]
+debug = true
