--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,11 @@ documentation = "https://docs.rs/milhouse"
 keywords = ["ethereum", "functional"]
 categories = ["data-structures", "cryptography::cryptocurrencies"]
 
+[features]
+debug = []
+arbitrary = ["dep:arbitrary", "alloy-primitives/arbitrary"]
+context_deserialize = ["dep:context_deserialize"]
+
 [dependencies]
 educe = "0.6.0"
 ethereum_hashing = "0.7.0"
@@ -26,7 +31,7 @@ vec_map = "0.8.2"
 smallvec = "1.8.0"
 arbitrary = { version = "1.2.3", features = ["derive"], optional = true }
 alloy-primitives = { version = "1.0.0" }
-
+context_deserialize = { version = "0.1", optional = true }
 
 [dev-dependencies]
 ssz_types = "0.11"
@@ -35,10 +40,6 @@ tree_hash_derive = "0.10"
 criterion = "0.5"
 dhat = "0.3.3"
 serde_json = "1.0.0"
-
-[features]
-arbitrary = ["dep:arbitrary", "alloy-primitives/arbitrary"]
-debug = []
 
 [[bench]]
 name = "rebase"
