--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -59,7 +59,8 @@ jobs:
     - name: Install cargo-tarpaulin
       uses: taiki-e/install-action@cargo-tarpaulin
     - name: Check code coverage with cargo-tarpaulin
-      run: cargo-tarpaulin --workspace --all-features --out xml
+      # Using --lib to avoid DHAT issues
+      run: cargo-tarpaulin --workspace --all-features --out xml --lib --timeout 1200
     - name: Upload to codecov.io
       uses: codecov/codecov-action@v4
       with:
